Fix z-index issue on the ad

--- a/styles/carbon.css
+++ b/styles/carbon.css
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 15px;
   right: 20px;
+  z-index: 9999;
 }
 
 #carbonads {
